# core-2024-11-02

./: README.md  hero.json
app_classes/: pyproject.toml  user.py
helper_functions/: pyproject.toml  salary_helpers.py
misc/: generators.py
salary_app/: main.py  pyproject.toml
serialization_examples/: hero.py
tests/: calculate_salary_test.py
