[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "helper_functions"
authors = [
    {name = "Josiah Carberry", email = "josiah_carberry@brown.edu"},
]
description = "Module for our helper_function"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "app_classes"
]